added links to logo/titles, create toast with react hot toast, and toast messages file added to project.

--- a/src/components/templates/BookCard.module.css
+++ b/src/components/templates/BookCard.module.css
@@ -15,8 +15,10 @@
     margin: 25px 0 15px 0;
 }
 
-.header span {
+.header span a{
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header img {
