--- a/src/components/templates/SignUpForm.module.css
+++ b/src/components/templates/SignUpForm.module.css
@@ -17,6 +17,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background-color: #fff;
+}
+
+.header div, .header a {
     background-color: #fff;
 }
 
@@ -36,6 +41,8 @@
 .form img {
     width: 80px;
     height: 84px;
+    margin: 0 15px;
+    background-color: #fff;
 }
 
 .form p {
@@ -48,6 +55,7 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: #282828;
+    background-color: #fff;
 }
 
 .form input {
