--- a/src/components/templates/BookCard.module.css
+++ b/src/components/templates/BookCard.module.css
@@ -21,15 +21,6 @@
     justify-content: center;
 }
 
-
-.header img {
-    width: 32px;
-    height: 32px;
-    margin-left: 15px;
-    margin-top: 6px;
-    margin: 5px 0 0 5px ;
-}
-
 .header p {
     font-size: 30px;
     margin: 5px 0 0 5px ;
@@ -83,8 +74,20 @@
 
 .bookList p {
     font-size: 20px;
-    height: 10px;
-    margin: 10px auto;
+    /* height: 10px; */
+    margin: auto 0;
+    background-color: #fff;
+}
+
+.detail {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.detail, span, svg {
+    background-color: #fff;
 }
 
 .bookList span {
@@ -96,10 +99,4 @@
     background-color: #ffffff00;
     border: none;
     width: 25px;
-}
-
-.detail {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
